--- a/peerinst/templates/peerinst/blink.html
+++ b/peerinst/templates/peerinst/blink.html
@@ -1,24 +1,32 @@
 {% extends 'peerinst/base.html' %}
+
 {% load i18n %}
 
 {% block body %}
+<main>
+  <section>
+    <h1 class="mdc-typography--display3" style="position:sticky;"> {% trans 'Blink Question' %}
+      <svg class="underline" width=150 height=4></svg>
+    </h1>
 
-<h1>Blink question</h1>
+    <h2 class="mdc-typography--display1 mdc-theme--secondary">{{object.question.title}}</h2>
 
-<h2>{{object.question.title}}</h2>
-<p>{{object.question.text|safe}}</p>
-{% if object.question.image %}
-<div>
-  <img style="display:block;margin:auto;padding-top:10pt;padding-bottom:10pt;" src="{{ object.question.image.url }}" alt="object.image_alt_text">
-</div>
-{% endif %}
-<form method="post">
-  {% csrf_token %}
-  {{ form.field_errors }}
-  {{ form }}
-  <div>
-    <input type="submit" value="{% block submit_button %}{% trans 'Submit' %}{% endblock %}" />
-  </div>
-</form>
+    <p class="mdc-theme--secondary">{{object.question.text|safe}}</p>
 
+    {% if object.question.image %}
+    <div>
+      <img class="question-image" src="{{ object.question.image.url }}" alt="object.image_alt_text">
+    </div>
+    {% endif %}
+
+    <form method="post">
+      {% csrf_token %}
+      {{ form.field_errors }}
+      {{ form }}
+      <div>
+        <input type="submit" value="{% block submit_button %}{% trans 'Submit' %}{% endblock %}" />
+      </div>
+    </form>
+  </section>
+</main>
 {% endblock %}
