--- a/peerinst/templates/peerinst/blinkquestion_detail.html
+++ b/peerinst/templates/peerinst/blinkquestion_detail.html
@@ -10,16 +10,22 @@
 // MIT licensed
 </script>
 
+<main>
+  <section>
+    <h1 class="mdc-typography--display3" style="position:sticky;"> {% trans 'Blink Question' %}
+      <svg class="underline" width=150 height=4></svg>
+    </h1>
 
-<h1>Blink question</h1>
+    <h2 class="mdc-typography--display1 mdc-theme--secondary">{{object.question.title}}</h2>
 
-<h2>{{object.question.title}}</h2>
-<p>{{object.question.text|safe}}</p>
+    <p class="mdc-theme--secondary">{{object.question.text|safe}}</p>
+
     {% if object.question.image %}
     <div>
-      <img src="{{ object.question.image.url }}" alt="object.image_alt_text" style="display:block;margin:auto;padding-top:10pt;padding-bottom:10pt;" >
+      <img class="question-image" src="{{ object.question.image.url }}" alt="object.image_alt_text" >
     </div>
     {% endif %}
+
 <div>
 <div style="display:inline;float:left;max-width:400px;">
   <ul>
