--- a/peerinst/templates/peerinst/blink.html
+++ b/peerinst/templates/peerinst/blink.html
@@ -1,6 +1,6 @@
 {% extends 'peerinst/base.html' %}
 
-{% load i18n %}
+{% load add_class i18n %}
 
 {% block body %}
 <main>
@@ -19,12 +19,30 @@
     </div>
     {% endif %}
 
+    {{ form.non_field_errors }}
+    
     <form method="post">
       {% csrf_token %}
-      {{ form.field_errors }}
-      {{ form }}
+      <span class="mdc-typography--body1">{{ form.first_answer_choice.label }}</span>
+      {{ form.first_answer_choice.errors }}
+      <ul>
+      {% for choice in form.first_answer_choice %}
+        <li>
+          <div class="mdc-form-field">
+            <div class="mdc-radio" data-mdc-auto-init="MDCRadio">
+              {{ choice.tag|add_class:"mdc-radio__native-control" }}
+              <div class="mdc-radio__background">
+                <div class="mdc-radio__outer-circle"></div>
+                <div class="mdc-radio__inner-circle"></div>
+              </div>
+            </div>
+            <label class="mdc-typography--body1" for="{{ choice.id_for_label }}">{{ choice.choice_label }}</label>
+          </div>
+        </li>
+      {% endfor %}
+      </ul>
       <div>
-        <input type="submit" value="{% block submit_button %}{% trans 'Submit' %}{% endblock %}" />
+        <input class="mdc-button mdc-button--raised" type="submit" value="{% block submit_button %}{% trans 'Submit' %}{% endblock %}" />
       </div>
     </form>
   </section>
