--- a/peerinst/templates/peerinst/assignment_detail.html
+++ b/peerinst/templates/peerinst/assignment_detail.html
@@ -10,6 +10,7 @@
     </h1>
     <div class="admin-link">
       <a href="{% url 'teacher' teacher.id %}">Back to My Account</a>
+      <span style="padding-left:0.3em;padding-right:0.5em;">|</span><a href="{% url 'teacher-assignments' teacher.id %}">{% trans 'Back to My Assignments' %}</a>
     </div>
     <h2 class="mdc-typography--display1  mdc-theme--secondary">{{object.title}}</h2>
     {% if not object.questions.all %}
