--- a/custom-settings/SALTISES4/static/peerinst/css/custom-instance.css
+++ b/custom-settings/SALTISES4/static/peerinst/css/custom-instance.css
@@ -29,6 +29,6 @@ h1 {
 .mdc-button {
   color: white !important;
 }
-.mdc-button.icon-list {
+div.input-ripple-wrapper input {
   color: grey !important;
 }
