ignore partner logos

--- a/peerinst/templates/registration/landing_page.html
+++ b/peerinst/templates/registration/landing_page.html
@@ -219,6 +219,9 @@ styleSheet.insertRule(".mdc-toolbar--flexible {--mdc-toolbar-ratio-to-extend-fle
         <li class="mdc-image-list__item">
           <img class="mdc-image-list__image" style="width:200px" src="{% static 'peerinst/img/dawson_logo.png' %}">
         </li>
+        <li class="mdc-image-list__item">
+          <img class="mdc-image-list__image" style="width:200px" src="{% static 'peerinst/img/mcgill_logo_big.png' %}">
+        </li>
       </ul>
     </div>
   </section>
