--- a/peerinst/static/peerinst/css/material-components-web.scss
+++ b/peerinst/static/peerinst/css/material-components-web.scss
@@ -22,6 +22,7 @@ $mdc-theme-background: #f4f4f4;
 @import '@material/button/mdc-button';
 @import '@material/checkbox/mdc-checkbox';
 @import '@material/chips/mdc-chips';
+@import '@material/dialog/mdc-dialog';
 @import '@material/elevation/mdc-elevation';
 @import '@material/form-field/mdc-form-field';
 @import '@material/icon-toggle/mdc-icon-toggle';
