--- a/peerinst/templates/peerinst/teacher_detail.html
+++ b/peerinst/templates/peerinst/teacher_detail.html
@@ -95,7 +95,6 @@
 </ul>
 
 
-
 <h2 class="mdc-typography--display1 mdc-theme--secondary">{% trans 'Assignments' %}</h2>
 <div class="admin-link">
   <a href="{% url 'teacher-assignments' teacher.id %}">Manage assignments</a>
@@ -119,11 +118,44 @@
       </span>
     </span>
     <span class="mdc-list-item__meta">
+      <i id="activate-dialog-{{a.pk|slugify}}" class="material-icons md-24 mdc-ripple-surface icon-list">help</i>
       <a href="{% url 'assignment-update' a.pk %}">
         <i class="material-icons md-24 mdc-ripple-surface icon-list">mode_edit</i>
       </a>
     </span>
   </li>
+
+  <aside id="dialog-{{a.pk|slugify}}"
+    class="mdc-dialog"
+    role="alertdialog"
+    aria-labelledby="assignment-parameters-label"
+    aria-describedby="assignment-parameters-description">
+    <div class="mdc-dialog__surface">
+      <header class="mdc-dialog__header">
+        <h2 id="assignment-parameters-label" class="mdc-dialog__header__title">
+          {% trans 'Assignment LTI parameters' %}
+        </h2>
+      </header>
+      <section id="assignment-parameters-description" class="mdc-dialog__body mdc-dialog__body--scrollable">
+        <p class="mdc-typography--body1">Import each question using the parameters listed below:</p>
+        <ul>
+        {% for q in a.questions.all %}
+          <li><strong>Question {{ forloop.counter }}:</strong>
+            <ul>
+              <li>{% trans 'LTI key' %}: {{ LTI_key }}</li>
+              <li>{% trans 'Assignment id' %}: {{ a.identifier }}</li>
+              <li>{% trans 'Question id' %}: {{ q.id }}</li>
+            </ul>
+        {% endfor %}
+        </ul>
+      </section>
+      <footer class="mdc-dialog__footer">
+        <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--accept">Ok</button>
+      </footer>
+    </div>
+    <div class="mdc-dialog__backdrop"></div>
+  </aside>
+
   {% endfor %}
   <li role="separator" class="mdc-list-divider"></li>
 </ul>
@@ -154,6 +186,7 @@
   {% endfor %}
   <li role="separator" class="mdc-list-divider"></li>
 </ul>
+
 </section>
 </main>
 {% endblock %}
@@ -161,13 +194,22 @@
 {% block scripts %}
 {% compress js inline %}
 <script>
+document.querySelectorAll("[id^=dialog]").forEach(
+  (el,i,list) => {
+    const dialog = bundle.dialog.MDCDialog.attachTo(el);
+    document.querySelector("#activate-"+el.id).onclick = () => {
+      dialog.show();
+    }
+  }
+);
+
 // This needs to be fix to activate JS part of ripple
 document.querySelectorAll('.ripple-icon').forEach(
-  (el,i,list)=>{
+  (el,i,list) => {
   //  const ripple = bundle.ripple.MDCRipple.attachTo(el);
   //  ripple.unbounded = true;
   }
-)
+);
 function edit_user() {
   location="{% url 'password_change' %}";
 }
