--- a/peerinst/templates/peerinst/teacher_assignments.html
+++ b/peerinst/templates/peerinst/teacher_assignments.html
@@ -39,8 +39,8 @@
   <h2 class="mdc-typography--display1 mdc-theme--secondary">{% trans 'Current' %}</h2>
 
   <p>{% blocktrans %} These are the assignments for which reports will be available (based on your selected groups).{% endblocktrans %}</p>
-  
-  {% if not teacher.groups.all %}
+
+  {% if not teacher.assignments.all %}
   <p>{% blocktrans %} You do not have any assignments.  You can select and modify an existing assignment from the list below or create a new one.{% endblocktrans %}</p>
   {% endif %}
 
