formatting changes to lti help dialog box

--- a/peerinst/templates/peerinst/teacher_detail.html
+++ b/peerinst/templates/peerinst/teacher_detail.html
@@ -119,7 +119,7 @@
       </span>
     </span>
     <span class="mdc-list-item__meta">
-      <i id="activate-dialog-{{a.pk|slugify}}" class="material-icons md-24 mdc-ripple-surface icon-list">help</i>
+      <i id="activate-dialog-{{a.pk|slugify}}" class="material-icons md-24 mdc-ripple-surface icon-list">info</i>
       <a href="{% url 'assignment-update' a.pk %}">
         <i class="material-icons md-24 mdc-ripple-surface icon-list">mode_edit</i>
       </a>
@@ -134,18 +134,23 @@
     <div class="mdc-dialog__surface">
       <header class="mdc-dialog__header">
         <h2 id="assignment-parameters-label" class="mdc-dialog__header__title">
-          {% trans 'Assignment LTI parameters' %}
+          {% trans 'How to use in your course through LTI' %}
         </h2>
       </header>
       <section id="assignment-parameters-description" class="mdc-dialog__body mdc-dialog__body--scrollable">
-        <p class="mdc-typography--body1">{% blocktrans %}Import each question using the parameters listed below{% endblocktrans %}:</p>
+        <p class="mdc-typography--body1">{% blocktrans %}Use the following to configure the LTI tool in your Learning Management System (e.g. Moodle, OpenEdx){% endblocktrans %}:</p>
+        <ul>
+            <li>{% trans 'LTI Launch URL' %} : {{ LTI_launch_url }}</li>
+            <li>{% trans 'LTI Consumer Key' %} : {{ LTI_key }}</li>
+            <li>{% trans 'LTI Shared Secret' %} : {{ LTI_secret }}</li>
+        </ul>
+        <p class="mdc-typography--body1">{% blocktrans %}To import any of the questions below, copy and paste the text below the question title into the <em>Custom Paramaters</em> box of your LTI tool{% endblocktrans %}:</p>
         <ul>
         {% for q in a.questions.all %}
-          <li><span class="bold">{% trans 'Question' %} {{ forloop.counter }}:</span>
+          <li><span class="bold">{{ q.title }}:</span>
             <ul>
-              <li>{% trans 'LTI key' %}: {{ LTI_key }}</li>
-              <li>{% trans 'Assignment id' %}: {{ a.identifier }}</li>
-              <li>{% trans 'Question id' %}: {{ q.id }}</li>
+              <li>{% trans 'assignment_id' %}={{ a.identifier }}</li>
+              <li>{% trans 'question id' %}={{ q.id }}</li>
             </ul>
         {% endfor %}
         </ul>
